--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@clerk/nextjs": "^4.29.1",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-popover": "^1.0.7",
@@ -26,9 +28,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "geopattern": "^1.2.3",
+    "i": "^0.3.7",
     "lucide-react": "^0.302.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "npm": "^10.2.5",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.3.1",
@@ -40,6 +45,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
+    "@types/geopattern": "^1.2.9",
     "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
