--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "geopattern": "^1.2.3",
     "i": "^0.3.7",
     "lucide-react": "^0.302.0",
+    "moment": "^2.30.1",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "npm": "^10.2.5",
+    "numeral": "^2.0.6",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.3.1",
@@ -48,6 +50,7 @@
     "@types/geopattern": "^1.2.9",
     "@types/jest": "^29.5.11",
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
