ip doesnt exist in app router, the end

--- a/package.json
+++ b/package.json
@@ -24,16 +24,20 @@
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "country-flag-icons": "^1.5.9",
+    "geoip-country": "^4.2.55",
     "geopattern": "^1.2.3",
     "i": "^0.3.7",
     "lucide-react": "^0.302.0",
     "moment": "^2.30.1",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "next-transpile-modules": "^10.0.1",
     "npm": "^10.2.5",
     "numeral": "^2.0.6",
     "react": "^18",
@@ -47,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
+    "@types/geoip-country": "^4.0.2",
     "@types/geopattern": "^1.2.9",
     "@types/jest": "^29.5.11",
     "@types/node": "^20",
