--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "country-flag-icons": "^1.5.9",
+    "date-fns": "^3.1.0",
     "geoip-country": "^4.2.55",
     "geoip-lite": "^1.4.9",
     "geopattern": "^1.2.3",
+    "highlight.js": "^11.9.0",
     "i": "^0.3.7",
     "ip3country": "^5.0.0",
     "lucide-react": "^0.302.0",
@@ -46,6 +49,8 @@
     "npm": "^10.2.5",
     "numeral": "^2.0.6",
     "react": "^18",
+    "react-code-blocks": "^0.1.5",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "recharts": "^2.10.3",
     "request-ip": "^3.3.0",
