--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "unique-username-generator": "^1.2.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zod-validation-error": "^2.1.0"
   },
@@ -72,6 +73,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/request-ip": "^0.0.41",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
